--- a/OracleJETApplication-V-2/views/partials/employee-basic-info-modal/employee-basic-info-modal-small.html
+++ b/OracleJETApplication-V-2/views/partials/employee-basic-info-modal/employee-basic-info-modal-small.html
@@ -101,52 +101,59 @@
                 <div class="currentWeekHeader"><strong>Current Week</strong> (8/40 hours) </div>
             </div>
 
-<!--
-            <div class="oj-flex-item currentWeekHeader" style="background-color: #000000;">
+            <div class="oj-flex-item currentWeekHeader weeklyTotalHeader">
                 <div>WEEKLY TOTALS</div>
                 <div>$126.75 (18.5 hours) | $120.00 tips</div>
                 <div>$246.75</div>
             </div>
-            <div class="oj-flex-item currentWeekHeader" style="background-color: #FAAC58;">
+            <div class="oj-flex-item currentWeekHeader job1TotalHeader">
                 <div>BARTENDER TOTALS</div>
                 <div>$126.75 (18.5 hours) | $120.00 tips</div>
                 <div>$246.75</div>
             </div>
-            <div class="oj-flex-item currentWeekHeader" style="background-color: #8181F7;">
+            <div class="oj-flex-item currentWeekHeader job2TotalHeader">
                 <div>SERVER TOTALS</div>
                 <div>$126.75 (18.5 hours) | $120.00 tips</div>
                 <div>$246.75</div>
             </div>
--->
 
             <div class="oj-flex-item currentFilmStrip">
-                <div id="filmStripDiv" class="oj-panel" style="margin: '20px';  width: 280px">
+                <div id="filmStripDiv" class="oj-panel" style="width:280px;">
                     <div id="filmStrip" aria-label="Set of chemicals" data-bind="ojComponent: {component: 'ojFilmStrip', arrowPlacement: self.currentNavArrowPlacement, arrowVisibility: self.currentNavArrowVisibility}">
 
                         <!-- ko foreach:formttedCurrentScheduledDateValues -->
 
                         <div class="oj-panel oj-panel-alt2 schedule-filmstrip-item" data-bind="style: {display:  $parent.getItemInitialDisplayDialog($index())}">
                             <div>
-                                <div style="background-color: black; color: white;  text-align: center;">
+                                <div class="dayHeader">
                                     <span data-bind="text: startDate"></span>
-                                    <br /><span style="float: " data-bind="text: totalEarning;"></span>
                                     <br /><span data-bind="text: dailyLoacl"></span>
                                     <br /><span data-bind="text: totalHours"></span> ( $<span data-bind="text: hourlyWage"></span> )
                                 </div>
-                                <div data-bind="foreach: locations" style="border: 1px solid #000000; padding: 5px; border-color: black">
-                                    <div style="border: 1px solid #000000; background-color: white; color: black;  text-align: center;">
-                                        <span data-bind="text: name"> </span>
-                                        <br /><span data-bind="text: address"> </span>
+                                <div class="dayBody">
+                                  <div class="oj-flex">
+                                      <span data-bind="text: totalHours"></span><span>hours</span>
+                                  </div>
+                                   <div class="oj-flex">
+                                        <span class="oj-flex-item oj-sm-6">Daily Total</span>
+                                        <span class="oj-flex-item oj-sm-6" data-bind="text: totalEarning;"></span>
                                     </div>
-                                    <div data-bind="foreach: workDetails;">
-                                        <div data-bind=" style: { 'background-color': backgroundcolor}">
-                                            <span data-bind="text: jobtitle"> </span>
-                                            <br /><span data-bind="text: (jobtitle === 'Not Scheduled' ? '' : workStation)"> </span>
-                                            <br /><span data-bind="text: (jobtitle === 'Not Scheduled' ? '' : time)"> </span>
-                                            <br /><span data-bind="text: (jobtitle === 'Not Scheduled' ? '' : (hours + ' hours'))"> </span>
+                                    <div data-bind="foreach: locations" >
+
+                                        <div>
+                                            <span data-bind="text: name"> </span>
+                                            <br /><span data-bind="text: address"> </span>
                                         </div>
+                                        <div data-bind="foreach: workDetails;">
+                                            <div data-bind=" style: { 'background-color': backgroundcolor}">
+                                                <span data-bind="text: jobtitle"> </span>
+                                                <br /><span data-bind="text: (jobtitle === 'Not Scheduled' ? '' : workStation)"> </span>
+                                                <br /><span data-bind="text: (jobtitle === 'Not Scheduled' ? '' : time)"> </span>
+                                                <br /><span data-bind="text: (jobtitle === 'Not Scheduled' ? '' : (hours + ' hours'))"> </span>
+                                            </div>
+                                        </div>
+                                        <br />
                                     </div>
-                                    <br />
                                 </div>
                                 <div data-bind="visible: (preferred === 'yes')" style="background-color: #fcfdfe; color: black; border: 1px solid #000000;  text-align: center;">
                                     <span>PREFERRED</span>
