updatd people header in mobile

--- a/OracleJETApplication-V-2/views/header.html
+++ b/OracleJETApplication-V-2/views/header.html
@@ -61,11 +61,11 @@
         <div data-bind="if: $root.router.stateId() == 'people'">
             <div id="peopleNavList" class="oj-flex">
                 <div class="oj-flex-item">
-                    <h1 class="inlineHeader"><span class="fa fa-users"></span> People <span class="fa fa-question custom-question-icon"></span> </h1>
+<!--                    <h1 class="inlineHeader"><span class="fa fa-users"></span> People <span class="fa fa-question custom-question-icon"></span> </h1>-->
                 </div>
                 <div class="oj-flex-item">
                     <!--            <a href="index.html?root=add-employee" class="basic-btn-link">Add</a>-->
-                    <a href="" data-bind="click: function(){handleOpen('#addEmpStatusDialog');}" class="basic-btn-link"><span class="fa fa-plus"></span> Add</a>
+<!--                    <a href="" data-bind="click: function(){handleOpen('#addEmpStatusDialog');}" class="basic-btn-link"><span class="fa fa-plus"></span> Add</a>-->
                 </div>
 
 
